@@ -16,6 +16,9 @@
         <activity android:name="PrefsActivity"
                   android:label="@string/titlePrefs">
         </activity>
+        <activity android:name="AboutActivity"
+                  android:label="@string/titleAbout">
+        </activity>
     </application>
     <uses-sdk android:minSdkVersion="16" />
     <uses-permission android:name="android.permission.INTERNET" />
