@@ -1,0 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:padding="10dp">
+<TextView
+        android:id="@+id/abouttext"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+	android:typeface="monospace"
+	android:textSize="12sp"
+	android:gravity="top"
+        android:linksClickable="true"
+        android:autoLink="web" />
+</RelativeLayout>
+
