@@ -185,6 +185,9 @@ public class MainActivity extends Activity {
             case R.id.itemPrefs:
                 startActivity(new Intent(this, PrefsActivity.class));
                 break;
+            case R.id.itemAbout:
+                startActivity(new Intent(this, AboutActivity.class));
+                break;
         }
         return true;
     }
